# simple-folder-management

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  docker-compose.yaml  make_testdir.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: push.yaml
sfm/: analysis.py  data.py  moves.py  path.py  types.py
tests/: __init__.py  app_test.py  dump_globs.txt  test_config.yaml  test_dirtree.yaml  utils.py  utils_test.py
tests/sfm/: __init__.py  types_test.py
views/: components.py  create.py  list.py  pending.py  utils.py
